# data_structs

./: meson.build
include/: binary_tree.h  linked_list.h  mystd.h  queue.h  stack.h  vector.h
src/: binary_tree.c  linked_list.c  queue.c  stack.c  vector.c
